# portable-attention

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  README.md  RESEARCH.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check.sh
src/portable_attention/: __init__.py  reference.py
tests/: test_public_api.py  test_reference.py  test_reference_suite.py  test_validation.py
