[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portable-attention"
version = "0.0.1"
description = "Portable, CUDA-independent attention/SDPA with pluggable backends — CPU-first and correctness-obsessed."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Vlad Bagmet" }]
keywords = ["attention", "sdpa", "transformer", "cpu", "portable", "cuda-free"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/vladbagmet/portable-attention"
Repository = "https://github.com/vladbagmet/portable-attention"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/portable_attention"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Typecheck runs on a single modern interpreter in CI (numpy's shipped stubs
# use 3.12 syntax); 3.9 runtime compatibility is enforced by ruff's
# target-version + pyupgrade, not by mypy's python_version.
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
