[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portable-attention"
dynamic = ["version"]
description = "Portable, CUDA-independent attention/SDPA with pluggable backends — CPU-first and correctness-obsessed."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Vlad Bagmet" }]
keywords = ["attention", "sdpa", "transformer", "cpu", "portable", "cuda-free"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/vladbagmet/portable-attention"
Repository = "https://github.com/vladbagmet/portable-attention"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "pyright>=1.1.350",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "coverage[toml]>=7",
]

# Single source of truth for the version: hatchling reads __version__ straight
# from the package, so the string lives in exactly one place (see __init__.py).
[tool.hatch.version]
path = "src/portable_attention/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/portable_attention"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.9"
# numpy ships its own stubs; silence the "no stubs" noise, keep everything else.
reportMissingTypeStubs = false
# numpy>=2's stubs propagate `Unknown` out of dynamically-typed ufuncs/overloads
# (e.g. swapaxes/tril/where/arange-indexing). mypy --strict never flagged these
# either — they are third-party dynamic-typing noise, not correctness issues.
# We disable ONLY the three numpy-return-driven reports and keep the rest of
# strict mode. Crucially, reportUnknownParameterType / reportUnknownLambdaType
# stay ON, so OUR own signatures must remain fully annotated.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
